force-app/main/default/objects/mkto_si__UserPreferences__c/mkto_si__UserPreferences__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ユーザ設定</label>
</CustomObject>