force-app/main/default/objects/mkto_si__UserPreferences__c/fields/mkto_si__BestBetsView__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__BestBetsView__c</fullName>
    <defaultValue>&quot;MBB&quot;</defaultValue>
    <label>Best Bets View</label>
    <length>18</length>
    <type>Text</type>
</CustomField>