force-app/main/default/objects/mkto_si__UserPreferences__c/fields/mkto_si__MaxPagesMTBB__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__MaxPagesMTBB__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Max Pages My Team&#39;s Best Bets</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>