force-app/main/default/objects/mkto_si__UserPreferences__c/fields/mkto_si__ShowWhatIsNew__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__ShowWhatIsNew__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show What&#39;s New</label>
    <type>Checkbox</type>
</CustomField>